@@ -178,6 +178,11 @@ function Promise(descriptor, fallback, valueOf) {
     return freeze(promise);
 };
 
+// provide thenables, CommonJS/Promises/A
+Promise.prototype.then = function (resolved, rejected) {
+    return when(this, resolved, rejected);
+};
+
 Promise.prototype.toSource = function () {
     return this.toString();
 };
@@ -259,6 +264,16 @@ function ref(object) {
     // not already Promises.
     if (isPromise(object))
         return object;
+    // assimilate thenables, CommonJS/Promises/A
+    if (object && typeof object.then === "function") {
+        return Promise({}, function (op, resolved, rejected) {
+            if (op !== "when") {
+                return reject("Operation " + op + " not supported by thenable promises");
+            } else {
+                return ref(object.then(resolved, rejected));
+            }
+        });
+    }
     return Promise({
         "when": function (rejected) {
             return object;
